[gd_scene load_steps=3 format=3 uid="uid://b8q34f51dcu65"]

[ext_resource type="Script" uid="uid://b33acf7h5e6bd" path="res://Scenes/report/single_stat.gd" id="1_5rd77"]
[ext_resource type="Theme" uid="uid://bqh1uqu1vqqoh" path="res://Assets/Themes/default.tres" id="1_befwq"]

[node name="SingleStatContainer" type="PanelContainer"]
theme = ExtResource("1_befwq")
script = ExtResource("1_5rd77")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="StatsVbox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StatName" type="Label" parent="MarginContainer/StatsVbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "StatA"

[node name="StatResult" type="Label" parent="MarginContainer/StatsVbox"]
layout_mode = 2
